--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="light_gray">#d3d5dc</color>
+    <color name="light_gray1">#f1f1f3</color>
+    <color name="drak_gray">#696b70</color>
+    <color name="blue">#4e98c4</color>
+
 </resources>
