--- a/app/src/main/res/layout/activity_productdetail.xml
+++ b/app/src/main/res/layout/activity_productdetail.xml
@@ -1,9 +1,236 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ProductDetailActivity">
+    tools:context=".activity.ProductDetailActivity"
+    android:background="@color/light_gray">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:id="@+id/bottom_layout"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/light_gray1">
+
+        <ImageButton
+            android:id="@+id/home_button"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/home"
+            android:scaleType="fitXY"
+            android:background="@android:color/transparent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="30dp"
+            android:layout_marginStart="40dp"
+            android:onClick="onHome"
+            />
+
+        <ImageButton
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_toEndOf="@+id/home_button"
+            android:src="@drawable/back"
+            android:background="@android:color/transparent"
+            android:scaleType="fitXY"
+            android:layout_marginBottom="30dp"
+            android:layout_marginStart="140dp"
+            android:onClick="onBack"/>
+
+        <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:corner_radius="10dp"
+            android:background="@color/blue"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="PRESS HERE"
+                android:textSize="45sp"
+                android:textColor="@android:color/white"
+                android:textAlignment="center"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TO FIND\nYOUR BRUSH"
+                android:textSize="30sp"
+                android:textColor="@android:color/white"
+                android:textAlignment="center"
+                android:gravity="center_vertical"/>
+
+        </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="240dp"
+            android:layout_marginBottom="30dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:button="@drawable/checkbox_selector"
+                    android:text="Single"
+                    android:textColor="@color/drak_gray"
+                    android:textSize="25sp"
+                    android:layout_marginBottom="10dp"/>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:button="@drawable/checkbox_selector"
+                    android:text="2 Pack"
+                    android:textColor="@color/drak_gray"
+                    android:textSize="25sp"
+                    android:layout_marginBottom="10dp"/>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:button="@drawable/checkbox_selector"
+                    android:text="4 Pack"
+                    android:textColor="@color/drak_gray"
+                    android:textSize="25sp"
+                    android:layout_marginBottom="10dp"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/top_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/thumb_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/thumb"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginTop="50dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reviews:"
+                android:layout_marginStart="50dp"
+                android:textSize="20sp"/>
+
+            <hyogeun.github.com.colorratingbarlib.ColorRatingBar
+                android:id="@+id/rating_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:rating="3.5"
+                app:changeable="false"
+                app:empty_color="#b6d6ea"
+                app:progress_color="@color/blue"
+                android:scaleX="0.5"
+                android:scaleY="0.5"
+                android:layout_marginStart="-15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="-10dp"/>
+
+            <TextView
+                android:id="@+id/price_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="30sp"
+                android:textColor="@color/drak_gray"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="50dp"
+                android:text="$3.99"/>
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/center_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_layout"
+        android:layout_below="@+id/top_layout"
+        android:background="@color/light_gray1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/serial_imageview"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp">
+
+            <ImageView
+                android:id="@+id/colgate_imageview"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/colgate"
+                android:scaleType="fitStart"
+                android:adjustViewBounds="true"
+                />
+
+            <TextView
+                android:id="@+id/name_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:textColor="@color/drak_gray"
+                android:layout_marginTop="10dp"
+                />
+
+            <TextView
+                android:id="@+id/description_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textColor="@color/drak_gray"
+                android:layout_marginTop="10dp"
+                />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/serial_imageview"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/seral_placeholder"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="30dp" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
