--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,14 +31,14 @@
         android:background="@color/light_gray">
 
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="240dp"
             android:layout_height="match_parent"
             android:padding="50dp">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="BENIFITS"
+                android:text="BENEFITS"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:textColor="@color/drak_gray"
@@ -107,7 +107,7 @@
         android:background="@color/light_gray1">
 
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="240dp"
             android:layout_height="match_parent"
             android:padding="50dp">
 
@@ -184,7 +184,7 @@
         android:background="@color/light_gray">
 
         <LinearLayout
-            android:layout_width="230dp"
+            android:layout_width="240dp"
             android:layout_height="match_parent"
             android:padding="50dp">
 
