--- a/app/src/main/res/layout/activity_productdetail.xml
+++ b/app/src/main/res/layout/activity_productdetail.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:layout_alignParentBottom="true"
         android:background="@color/light_gray1">
 
@@ -58,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="PRESS HERE"
-                android:textSize="45sp"
+                android:textSize="40sp"
                 android:textColor="@android:color/white"
                 android:textAlignment="center"
                 android:textStyle="bold"/>
@@ -67,7 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TO FIND\nYOUR BRUSH"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textColor="@android:color/white"
                 android:textAlignment="center"
                 android:gravity="center_vertical"/>
@@ -87,6 +87,7 @@
                 android:orientation="vertical">
 
                 <CheckBox
+                    android:id="@+id/checkbox_single"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -94,9 +95,11 @@
                     android:text="Single"
                     android:textColor="@color/drak_gray"
                     android:textSize="25sp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="5dp"
+                    android:clickable="false"/>
 
                 <CheckBox
+                    android:id="@+id/checkbox_2pack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -104,9 +107,11 @@
                     android:text="2 Pack"
                     android:textColor="@color/drak_gray"
                     android:textSize="25sp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="5dp"
+                    android:clickable="false"/>
 
                 <CheckBox
+                    android:id="@+id/checkbox_4pack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -114,7 +119,8 @@
                     android:text="4 Pack"
                     android:textColor="@color/drak_gray"
                     android:textSize="25sp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginBottom="5dp"
+                    android:clickable="false"/>
             </LinearLayout>
 
         </RelativeLayout>
