--- a/app/src/main/res/layout/activity_productdetail.xml
+++ b/app/src/main/res/layout/activity_productdetail.xml
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="240dp"
+            android:layout_marginStart="280dp"
             android:layout_marginBottom="30dp">
 
             <LinearLayout
@@ -223,7 +223,8 @@
                 android:textSize="20sp"
                 android:textColor="@color/drak_gray"
                 android:layout_marginTop="10dp"
-                />
+                android:layout_marginBottom="5dp"
+                android:scrollbars="vertical" />
 
         </LinearLayout>
 
