Send the serial command in press button

--- a/app/src/main/res/layout/activity_productdetail.xml
+++ b/app/src/main/res/layout/activity_productdetail.xml
@@ -43,6 +43,7 @@
             android:onClick="onBack"/>
 
         <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
+            android:id="@+id/btnPress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:corner_radius="10dp"
