--- a/app/src/main/res/layout/activity_productdetail.xml
+++ b/app/src/main/res/layout/activity_productdetail.xml
@@ -147,14 +147,15 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="150dp"
+            android:gravity="center_vertical">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Reviews:"
                 android:layout_marginStart="50dp"
-                android:textSize="20sp"/>
+                android:textSize="25sp"/>
 
             <hyogeun.github.com.colorratingbarlib.ColorRatingBar
                 android:id="@+id/rating_bar"
@@ -167,14 +168,14 @@
                 android:scaleX="0.5"
                 android:scaleY="0.5"
                 android:layout_marginStart="-15dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="-10dp"/>
 
             <TextView
                 android:id="@+id/price_textview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="35sp"
                 android:textColor="@color/drak_gray"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="50dp"
@@ -196,17 +197,16 @@
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/serial_imageview"
             android:orientation="vertical"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="20dp">
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="40dp">
 
             <ImageView
                 android:id="@+id/colgate_imageview"
-                android:layout_width="150dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/colgate"
                 android:scaleType="fitStart"
-                android:adjustViewBounds="true"
-                />
+                android:adjustViewBounds="true" />
 
             <TextView
                 android:id="@+id/name_textview"
@@ -214,8 +214,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
                 android:textColor="@color/drak_gray"
-                android:layout_marginTop="10dp"
-                />
+                android:layout_marginTop="30dp" />
 
             <TextView
                 android:id="@+id/description_textview"
@@ -223,8 +222,8 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textColor="@color/drak_gray"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
                 android:scrollbars="vertical" />
 
         </LinearLayout>
@@ -237,7 +236,10 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:layout_alignParentEnd="true"
-            android:layout_margin="30dp" />
+            android:layout_marginBottom="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp" />
 
     </RelativeLayout>
 
