--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
 
+    <color name="white">#ffffff</color>
     <color name="light_gray">#d3d5dc</color>
     <color name="light_gray1">#f1f1f3</color>
     <color name="drak_gray">#696b70</color>
