--- a/app/src/main/res/layout/activity_productdetail.xml
+++ b/app/src/main/res/layout/activity_productdetail.xml
@@ -56,6 +56,7 @@
             android:padding="10dp">
 
             <TextView
+                android:id="@+id/txtPress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="PRESS HERE"
@@ -65,6 +66,7 @@
                 android:textStyle="bold"/>
 
             <TextView
+                android:id="@+id/txtFindBrash"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TO FIND\nYOUR BRUSH"
