Update the json file and add what's new function

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -302,7 +302,7 @@
                 fancy:fb_radius="10dp"
                 android:layout_marginStart="50dp"
                 android:layout_centerVertical="true"
-                />
+                android:onClick="onWhatNew" />
 
             <mehdi.sakout.fancybuttons.FancyButton
                 android:layout_width="250dp"
